[tool.poetry]
name = "notionapimanager"
version = "0.1.0"
description = "Python package for consulting, creating and editing Notion databases"
authors = ["Ruben Chulia Mena <rubchume@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
